servo/tests/compiletest/plugin/compile-fail/unrooted_must_root.rs
#
!
[
allow
(
dead_code
)
]
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
script_plugins
)
]
#
[
must_root
]
struct
Foo
{
v
:
i32
}
struct
Bar
{
f
:
Foo
}
fn
foo1
(
_
:
Foo
)
{
}
fn
foo2
(
)
-
>
Foo
{
Foo
{
v
:
10
}
}
fn
main
(
)
{
}
